--- a/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/Base.lproj/Main.storyboard
@@ -22,7 +22,11 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <barButtonItem systemItem="action" id="nOp-2y-mf0"/>
+                                    <barButtonItem systemItem="action" id="nOp-2y-mf0">
+                                        <connections>
+                                            <action selector="shareAction:" destination="BYZ-38-t0r" id="iWg-kd-0Cj"/>
+                                        </connections>
+                                    </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Pyp-O8-BRW"/>
                                     <barButtonItem systemItem="cancel" id="uOg-nd-mkw"/>
                                 </items>
@@ -30,6 +34,7 @@
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UrE-Q1-IQ1">
                                 <rect key="frame" x="0.0" y="44" width="320" height="480"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <color key="backgroundColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </imageView>
                             <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="ZKK-Oy-NQe">
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
@@ -38,13 +43,13 @@
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="r9W-9k-lFn"/>
                                     <barButtonItem systemItem="camera" id="Jbe-Dn-qKR">
                                         <connections>
-                                            <action selector="pickAnImage:" destination="BYZ-38-t0r" id="Pyw-fN-y1h"/>
+                                            <action selector="albumAction:" destination="BYZ-38-t0r" id="VV5-oL-aE6"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="BLE-wS-RqP"/>
                                     <barButtonItem tag="1" title="Album" id="wBM-zS-xIv">
                                         <connections>
-                                            <action selector="pickAnImage:" destination="BYZ-38-t0r" id="nu3-g6-TQF"/>
+                                            <action selector="albumAction:" destination="BYZ-38-t0r" id="hya-6K-vyv"/>
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="PuF-0J-Foa"/>
@@ -74,6 +79,7 @@
                         <outlet property="bottomTextField" destination="xTr-MZ-568" id="3B5-cB-fcq"/>
                         <outlet property="cameraBarButtonItem" destination="Jbe-Dn-qKR" id="VI4-3S-68V"/>
                         <outlet property="imageView" destination="UrE-Q1-IQ1" id="1Ea-mg-A8H"/>
+                        <outlet property="shareBarButtonItem" destination="nOp-2y-mf0" id="uRY-dm-Phg"/>
                         <outlet property="topTextField" destination="b3e-OA-PyF" id="Anb-gk-l7p"/>
                     </connections>
                 </viewController>
