--- a/MemeMe/Storyboards/Base.lproj/Main.storyboard
+++ b/MemeMe/Storyboards/Base.lproj/Main.storyboard
@@ -13,7 +13,7 @@
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="ViewController" id="BYZ-38-t0r" customClass="ViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -22,7 +22,7 @@
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
                                 <items>
-                                    <barButtonItem systemItem="action" id="nOp-2y-mf0">
+                                    <barButtonItem enabled="NO" systemItem="action" id="nOp-2y-mf0">
                                         <connections>
                                             <action selector="shareAction:" destination="BYZ-38-t0r" id="iWg-kd-0Cj"/>
                                         </connections>
@@ -77,10 +77,12 @@
                     </view>
                     <connections>
                         <outlet property="bottomTextField" destination="xTr-MZ-568" id="3B5-cB-fcq"/>
+                        <outlet property="bottomToolbar" destination="ZKK-Oy-NQe" id="bMh-Je-bJp"/>
                         <outlet property="cameraBarButtonItem" destination="Jbe-Dn-qKR" id="VI4-3S-68V"/>
                         <outlet property="imageView" destination="UrE-Q1-IQ1" id="1Ea-mg-A8H"/>
                         <outlet property="shareBarButtonItem" destination="nOp-2y-mf0" id="uRY-dm-Phg"/>
                         <outlet property="topTextField" destination="b3e-OA-PyF" id="Anb-gk-l7p"/>
+                        <outlet property="topToolbar" destination="FGC-Km-fZP" id="Zlj-au-L2C"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
