--- a/MemeMe/View/Main.storyboard
+++ b/MemeMe/View/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="6Nb-Qe-QU3">
     <device id="retina4_0" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -13,26 +13,26 @@
         <!--Tab Bar Controller-->
         <scene sceneID="wr0-Vm-uvq">
             <objects>
-                <tabBarController id="6Nb-Qe-QU3" sceneMemberID="viewController">
+                <tabBarController hidesBottomBarWhenPushed="YES" id="6Nb-Qe-QU3" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="JYU-tV-XFL">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="KPX-GD-mA7" kind="relationship" relationship="viewControllers" id="vsF-Ox-ytc"/>
-                        <segue destination="juq-KW-WSe" kind="relationship" relationship="viewControllers" id="nm1-Je-rF2"/>
+                        <segue destination="juq-KW-WSe" kind="relationship" relationship="viewControllers" id="vxZ-vc-pYd"/>
+                        <segue destination="KPX-GD-mA7" kind="relationship" relationship="viewControllers" id="Op0-BD-JCR"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fik-K7-AZn" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1741" y="84"/>
         </scene>
-        <!--Item-->
+        <!--Navigation Controller-->
         <scene sceneID="AsQ-Wf-FM2">
             <objects>
                 <navigationController id="KPX-GD-mA7" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="hOZ-cN-ehd"/>
+                    <tabBarItem key="tabBarItem" title="" selectedImage="Collection" id="hOZ-cN-ehd"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZeX-oz-2xf">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -43,9 +43,9 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K0W-V8-lGo" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-984" y="476"/>
+            <point key="canvasLocation" x="-924" y="482"/>
         </scene>
-        <!--Sent Meme Collection View Controller-->
+        <!--Sent Memes-->
         <scene sceneID="gOU-Hj-mL7">
             <objects>
                 <collectionViewController id="a4y-g9-6Cc" customClass="SentMemeCollectionViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
@@ -83,17 +83,26 @@
                             <outlet property="delegate" destination="a4y-g9-6Cc" id="s6q-B4-EYf"/>
                         </connections>
                     </collectionView>
-                    <navigationItem key="navigationItem" id="r3U-ih-jbT"/>
+                    <navigationItem key="navigationItem" title="Sent Memes" id="r3U-ih-jbT">
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="aEB-kb-ZBq">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="RZf-bJ-FWU"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="flowLayout" destination="5fI-Xl-4D4" id="fn6-Ar-JA8"/>
+                    </connections>
                 </collectionViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cet-T2-H7q" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-249.375" y="474.29577464788736"/>
+            <point key="canvasLocation" x="-133" y="482"/>
         </scene>
-        <!--Item-->
+        <!--Navigation Controller-->
         <scene sceneID="TKa-BX-XIG">
             <objects>
                 <navigationController id="juq-KW-WSe" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Item" id="dsz-ws-DeI"/>
+                    <tabBarItem key="tabBarItem" title="" selectedImage="Table" id="dsz-ws-DeI"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vjT-MP-byw">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -104,9 +113,9 @@
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="l0k-7x-HIs" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-984" y="-283"/>
+            <point key="canvasLocation" x="-924" y="-279"/>
         </scene>
-        <!--Sent Meme Table View Controller-->
+        <!--Sent Memes-->
         <scene sceneID="xlF-v0-aa3">
             <objects>
                 <tableViewController id="n9M-cs-lhO" customClass="SentMemeTableViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
@@ -115,7 +124,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <prototypes>
-                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="Jvb-8p-DSf">
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" reuseIdentifier="tableViewCell" id="Jvb-8p-DSf">
                                 <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="Jvb-8p-DSf" id="2A5-s4-IDV">
@@ -129,11 +138,21 @@
                             <outlet property="delegate" destination="n9M-cs-lhO" id="lmL-xV-2Kj"/>
                         </connections>
                     </tableView>
-                    <navigationItem key="navigationItem" id="HBi-W4-95Q"/>
+                    <navigationItem key="navigationItem" title="Sent Memes" id="HBi-W4-95Q">
+                        <barButtonItem key="leftBarButtonItem" title="Edit" id="VIL-rS-esc"/>
+                        <barButtonItem key="rightBarButtonItem" systemItem="add" id="OoL-so-eFA">
+                            <connections>
+                                <segue destination="BYZ-38-t0r" kind="show" id="T9N-1Q-evO"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
+                    <connections>
+                        <outlet property="tableView" destination="hfC-qj-sVB" id="kco-A7-RUW"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Aeh-Xa-8ej" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-249" y="-283"/>
+            <point key="canvasLocation" x="-133" y="-280"/>
         </scene>
         <!--Add Meme View Controller-->
         <scene sceneID="tne-QT-ifu">
@@ -212,7 +231,38 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="992" y="-54"/>
+            <point key="canvasLocation" x="688" y="83"/>
+        </scene>
+        <!--Detail View Controller-->
+        <scene sceneID="yOS-T8-p1X">
+            <objects>
+                <viewController storyboardIdentifier="detailViewController" id="veC-tP-t0a" customClass="DetailViewController" customModule="MemeMe" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ESX-eX-ffr">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cUs-aV-9oi">
+                                <rect key="frame" x="16" y="113" width="288" height="343"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <viewLayoutGuide key="safeArea" id="hP4-mz-L0c"/>
+                    </view>
+                    <connections>
+                        <outlet property="detailImageView" destination="cUs-aV-9oi" id="x2y-tr-dSN"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kIE-mo-Iek" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-133.125" y="1200"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="Collection" width="30" height="30.5"/>
+        <image name="Table" width="30" height="30"/>
+    </resources>
+    <inferredMetricsTieBreakers>
+        <segue reference="T9N-1Q-evO"/>
+    </inferredMetricsTieBreakers>
 </document>
