--- a/MemeMe/View/Main.storyboard
+++ b/MemeMe/View/Main.storyboard
@@ -32,7 +32,7 @@
         <scene sceneID="AsQ-Wf-FM2">
             <objects>
                 <navigationController id="KPX-GD-mA7" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" selectedImage="Collection" id="hOZ-cN-ehd"/>
+                    <tabBarItem key="tabBarItem" title="" image="Collection" selectedImage="Collection" id="hOZ-cN-ehd"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ZeX-oz-2xf">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -60,7 +60,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SentMemeCollectionViewCell" id="fsh-cX-bg4" customClass="SentMemeCollectionViewCell" customModule="MemeMe" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="collectionViewCell" id="fsh-cX-bg4" customClass="SentMemeCollectionViewCell" customModule="MemeMe" customModuleProvider="target">
                                 <rect key="frame" x="0.0" y="0.0" width="110" height="121"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
@@ -102,7 +102,7 @@
         <scene sceneID="TKa-BX-XIG">
             <objects>
                 <navigationController id="juq-KW-WSe" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="" selectedImage="Table" id="dsz-ws-DeI"/>
+                    <tabBarItem key="tabBarItem" title="" image="Table" selectedImage="Table" id="dsz-ws-DeI"/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="vjT-MP-byw">
                         <rect key="frame" x="0.0" y="20" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
@@ -139,7 +139,6 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" title="Sent Memes" id="HBi-W4-95Q">
-                        <barButtonItem key="leftBarButtonItem" title="Edit" id="VIL-rS-esc"/>
                         <barButtonItem key="rightBarButtonItem" systemItem="add" id="OoL-so-eFA">
                             <connections>
                                 <segue destination="BYZ-38-t0r" kind="show" id="T9N-1Q-evO"/>
