--- a/MemeMe/View/Main.storyboard
+++ b/MemeMe/View/Main.storyboard
@@ -171,7 +171,11 @@
                                         </connections>
                                     </barButtonItem>
                                     <barButtonItem style="plain" systemItem="flexibleSpace" id="Pyp-O8-BRW"/>
-                                    <barButtonItem systemItem="cancel" id="uOg-nd-mkw"/>
+                                    <barButtonItem systemItem="cancel" id="uOg-nd-mkw">
+                                        <connections>
+                                            <action selector="cancelAction:" destination="BYZ-38-t0r" id="coo-MU-HhB"/>
+                                        </connections>
+                                    </barButtonItem>
                                 </items>
                             </toolbar>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="UrE-Q1-IQ1">
@@ -241,7 +245,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cUs-aV-9oi">
-                                <rect key="frame" x="16" y="113" width="288" height="343"/>
+                                <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                         </subviews>
